--- a/jupyter-notebooks/active-learning-part-1/active-learning-part-1.ipynb
+++ b/jupyter-notebooks/active-learning-part-1/active-learning-part-1.ipynb
@@ -260,10 +260,10 @@
     "    '''Creates a labeling frontend and returns its id.'''\n",
     "    client = Client(LABELBOX_API_KEY)\n",
     "    response = client.execute('''\n",
-    "        mutation CreateLabelingFrontend {\n",
+    "        mutation CreateLabelingFrontend ($name: String!) {\n",
     "          createLabelingFrontend(data: {\n",
     "            description: \"Classify sentiment as positive or negative\",\n",
-    "            iframe_url_path: \"https://classification.labelbox.com\",\n",
+    "            iframeUrlPath: \"https://classification.labelbox.com\",\n",
     "            name: $name\n",
     "          }){\n",
     "            id\n",
